# TER_Project

./: 404.html  README.md  anonymizer.py  attacks.py  benchmark.py  benchmark_summary.csv  config.py  index.html  mkdocs.yml  run_benchmark.py  sitemap.xml  utility.py  visualize.py
anonymisation/: index.html
classification/: index.html
classification_models/: index.html
configs/: adult_demo_with_record_id.json  base_config.json  benchmark_grid.json  benchmark_grid_demo.json  classification_config.json  linkage_benchmark_grid.json  mia_benchmark_grid.json  one_experiment_qi5_k5_l2.json  utility_benchmark_grid.json
docs/: classification_models.md  index.md
formats_fichiers/: index.html
hierarchies/: age.csv  race.csv  relationship.csv  sex.csv  test.deid  workclass.csv
metriques/: index.html
outputs/: benchmark_summary.csv  classification_summary.csv  utility_summary.csv
privJedAI-main/: .gitignore  _config.yml  pyproject.toml
privJedAI-main/data/ccer/D1/: gtclean.csv
privJedAI-main/data/ccer/D2/: abtclean.csv  buyclean.csv  gtclean.csv
privJedAI-main/data/ccer/D3/: gtclean.csv
privJedAI-main/data/ccer/D4/: acmclean.csv  dblpclean.csv  gtclean.csv
privJedAI-main/data/ccer/D5/: gtclean.csv
privJedAI-main/data/ccer/D6/: gtclean.csv
privJedAI-main/data/ccer/D8/: walmartclean.csv
privJedAI-main/data/der/cddb/: cddb.csv  gt.csv
privJedAI-main/data/der/coraLarge/: cora.csv  gt.csv
privJedAI-main/data/test/: test1.csv
privJedAI-main/docs/: myst.yml  requirements.txt
privJedAI-main/docs/pages/: edbt2026.md
privJedAI-main/src/privjedai/: base_clustering.py  clustering.py  datamodel.py  encoded_data.py  encoder.py  matching.py  utils.py
privJedAI-main/src/privjedai/gpu/: base_clustering.py  clustering.py  matching.py  utils.py
privJedAI-main/src/tests/: .coverage  blocking.py
scripts/: classification_models.py  classification_report_section.py  clean_outputs.py  common.py  compute_classification_metrics.py  compute_utility_metrics.py  demo_schema_matching.py  generate_anonymization_report.py  generate_linkage_attack_report.py  generate_mia_attack_report.py  linkage_helpers.py  make_auxiliary_base.py  make_mia_targets.py  make_mia_targets_post_ano.py  patch_recitals_arx.py  plot_classification_results.py  prepare_dataset_with_record_id.py  privjedai_utils.py  run_attack_benchmark.py  run_benchmark.py  (+9 more)
(+922 files in other folders)
